# prelude-data

./: .gitignore  README.md  index.html  privacy.html  pyproject.toml
data/: access_overlay.yaml  access_venues.yaml  companies_seed.yaml  pipeline_overlay.yaml  wrappers_overlay.yaml  wrappers_seed.yaml
feed/: index.json
feed/v1/: briefs.json  companies.json  feed_meta.json  pipeline.json  signals.json  wrappers.json
scripts/: audit_status.py  briefs_review.py  check_sources.py  notify_review.ps1  run_briefs.ps1  run_nightly.ps1  staleness_sweep.py
src/prelude_data/: __init__.py  ark.py  briefs_cli.py  briefs_draft.py  briefs_gather.py  briefs_lint.py  briefs_publish.py  builders.py  compute.py  config.py  crosscheck.py  edgar.py  http_client.py  market.py  pipeline.py  publish.py  validate.py
tests/: test_ark.py  test_briefs.py  test_briefs_topics.py  test_builders_merge.py  test_compute.py  test_crosscheck.py  test_edgar.py  test_lifecycle.py  test_market.py  test_publish.py  test_review_console.py  test_validate.py
